--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,8 +3,14 @@
   min-height: 100vh;
   padding-bottom: 5rem;
   overflow-x: hidden;
-  /* prevent any row from blowing out the width */
   width: 100%;
+}
+
+.home {
+  padding-top: 80px;
+  background-color: #141414;
+  min-height: 100vh;
+  padding-bottom: 5rem;
 }
 
 .rows-container {
